@@ -3,6 +3,7 @@ VDR Plugin 'xineliboutput' Revision History
 
 ????-??-??: Version 1.1.0
 
+- Added sharpness and noise reduction setup options for VDPAU.
 - Added '-C'/'--config' command-line option to specify xine's configuration file.
 - Replaced cIConv with VDR's cCharConv.
 - Supports only for vdr-1.6.0 or later.
